# documents

./: .gitignore
demos/: .gitignore
demos/simple-udp/: BufferReader.cpp  BufferReader.h  BufferWriter.h  CMakeLists.txt  Commands.h  GameEngine.cpp  GameEngine.h  Header.h  NetAddress.cpp  NetAddress.h  NetSocket.cpp  NetSocket.h  PropertyMacros.h  RUDPClient.cpp  RUDPClient.h  RUDPServer.cpp  RUDPServer.h  RawBuffer.cpp  RawBuffer.h  Session.cpp  Session.h  Singleton.h  build.sh  tech_tips.md  udp  udp-presentation.md  udp.cpp  udpclient.cpp  udpserver.cpp
demos/simple-udp/playground/: build_ode.sh  byte_order  bytes_order  bytes_order.cpp  cpp_pbtest.cpp  cpp_pbtest.pb.cc  cpp_pbtest.pb.h  cpp_pbtest.proto  cpp_serialize_method  cpp_serialize_method.cpp  memory_stream  memory_stream.cpp  net_stream.h  ode_collision.cpp  ode_drawing.cpp  ode_func_bind.cpp  ode_joint.cpp  ode_lab.cpp  ode_learning.cpp  serialization  serialization.cpp  simple_refactor.cpp  threading.cpp
demos/simple-udp/proto/: NetMessage.h  gameplay.pb.cc  gameplay.pb.h
demos/simple-udp/proto/desc/: gameplay.proto  protoc
demos/simple-udp/proto/src/: NetMessage.h
demos/simple-udp/src/: BufferWriter.cpp  BufferWriter.h  Commands.h  Common.h  GameClient.cpp  GameClient.h  GameEngine.cpp  GameEngine.h  GameObject.cpp  GameObject.h  GameRenderer.h  NetAddress.h  NetSocket.cpp  PropertyMacros.h  RUDPClient.cpp  RUDPClient.h  RUDPServer.cpp  RUDPServer.h  Session.cpp  Session.h  World.cpp  World.h  main.cpp
demos/simple-udp/src/game_networking/: BufferReader.h  BufferWriter.cpp  Common.h  GameObject.cpp  GameObject.h  Header.h  NetAddress.cpp  NetSocket.cpp  NetSocket.h  RUDPClient.cpp  RUDPClient.h  RUDPServer.h  RawBuffer.h  Session.cpp  Session.h  World.h  main.cpp
demos/simple-udp/udp.dSYM/Contents/: Info.plist
demos/simple-udp/udp.dSYM/Contents/Resources/DWARF/: udp
mofps_doc/: Pvp_Networking.md  server_engine_arch.drawio
mofps_doc/export/: index.html
